@@ -2,11 +2,13 @@ DIST bzrtools-1.10.0.tar.gz 69727 RMD160 d3972fba6fef72342f963bb332ec2a94a8a3b30
 DIST bzrtools-1.11.0.tar.gz 69765 RMD160 71cd4e4f5f741dcc2e12b6b785ed6932725743ec SHA1 2b13cb2790229dd4381ee6e79765e2ace1cf98ea SHA256 1a0b257df9b5719188da022ecdb22d380bb9c7b037543e7bc205e4ec235f386b
 DIST bzrtools-1.12.0.tar.gz 69766 RMD160 db2dec8599516c2070ac6d9541263db8dcd80ee2 SHA1 0db2e98f4b51e7bb5365f984be6bd07a67ac52b7 SHA256 801c04368449464512cfd9a7a07c11fe58abf18432b66bffeec8b97b346dbc81
 DIST bzrtools-1.13.0.tar.gz 69821 RMD160 a0047ed5e4fccc92a3a0f0a07ee7ab2e2909fb1f SHA1 4a01c12177bb781fe61cbae4a5cfcf13e5c35636 SHA256 54477407db8c7e49d8a6242f5969b607c68f03a43e39c4a0ac5754052d3acba7
+DIST bzrtools-1.14.0.tar.gz 69683 RMD160 1df0c502311925f115d9298d3ca5010ca1de5476 SHA1 f7c81a14b0e0a98647e1ef0369fc13de65c97962 SHA256 4fe7f14b7ffa3e4fca8f5ae95cc01ce97d869e96b569a75bc8dd701981380da4
 DIST bzrtools-1.9.1.tar.gz 69410 RMD160 70f93e6a7940c2433ac244c0bb02d30e4e255131 SHA1 96134cbe263df4075277da325dd26f58fc4f0ea4 SHA256 611170dbd2ab5c999c845eabcb59089011b918228bc04831656fb9c89898c5ef
 EBUILD bzrtools-1.10.0.ebuild 1417 RMD160 393f0104b30347b9ac084ee0368108bfef973f98 SHA1 360b330ec9a683e6678e7300ccf9ae857b514246 SHA256 4f346603207d1b24aec57a573108ec11354da73fd414386fea8b57e01ac60156
 EBUILD bzrtools-1.11.0.ebuild 1417 RMD160 981e0fd622f5ccaf95a9c1d76175ed244af6c118 SHA1 86c3270b52b6758dd79cf9770ffda188f0d79fdf SHA256 08be02b107fb704e988f8f52dfbb02f043d02be84daae59113f7efd54ec49f84
 EBUILD bzrtools-1.12.0.ebuild 1405 RMD160 8d1a4820dbe62c8fdbcea744f2dc43a28b2804de SHA1 f431fd04a8ee80248ee0ddd192acda8101ad3749 SHA256 413ee59b7486d98482f19534b69d9075dfc32cf6074017a0e779259d32cb94f8
 EBUILD bzrtools-1.13.0.ebuild 1403 RMD160 b96b7ce4cbf9ff944d2fc8580f7ba56e0dfab51a SHA1 72d27682ff8518af45b332318c0a8c862efa78cb SHA256 12f0e0b21c4f6d0f68bc5a8e4db11922741b2b8fb3a57b1081bb10e9dfb80ce7
+EBUILD bzrtools-1.14.0.ebuild 1406 RMD160 807e150b4c01c6bfbd2b7899c68c8684b31d8e99 SHA1 fa8c8d1c8675939f8a6e6b63a97026e6a28530f3 SHA256 2ddd1a2bf2b62f2c15fb2734adb492c57e6da326b910af1a892e7b2a79d03b34
 EBUILD bzrtools-1.9.1.ebuild 1412 RMD160 f644a6fece23b5c30f33b7dfc92fe40d47519406 SHA1 14664580a77c0b561d9234b27f0f99e20a02eb95 SHA256 a270e35c05d33d668403721442782f307fbe9f2fcc66267e78a026804b654f93
-MISC ChangeLog 7459 RMD160 8c6c0ed25dc251d9e325b9ff74d3389bbd03de56 SHA1 11046dbdbb9ad88e1588683b3ae39ae76362f3ee SHA256 e5c72ad09e800c09acae7441e80ac6fea5bc5152747e90bf37b53572fcdbe778
+MISC ChangeLog 7570 RMD160 7138d0b83a0164301611f82ba7f9251e89509036 SHA1 980fb8d1d8cad117e2c4651b686f69ed40756011 SHA256 2e9cf0b8991e8d5dad8c0802f5294c8bfb92328cc1b5bbe0f1f617c03f3ca5ee
 MISC metadata.xml 361 RMD160 d77927c9c34f5be7b754769f90913041627e96ac SHA1 1e201037cbce92208e6b0cbd129963e59b2a6cd5 SHA256 44e6fd2572b23364bbb2fc284d1c4edb708452f2fbe93f9f6465d5dcc10c28ec
